# clean-ranges

./: CMakeLists.txt  README.md
src/clean-ranges/: algorithms.hh  predicates.hh  range.hh  smart_range.hh
src/clean-ranges/algorithms/: all.hh  any.hh  average.hh  cast_to.hh  chunked.hh  collect.hh  compare.hh  concat.hh  contains.hh  copy.hh  count.hh  drop.hh  each.hh  element_at.hh  empty.hh  enumerate.hh  fill.hh  find.hh  first.hh  flatmap.hh  for_each.hh  index_of.hh  indexed.hh  last.hh  map.hh  minmax.hh  n_th.hh  none.hh  pad_with.hh  reduce.hh  repeat.hh  single.hh  sum.hh  take.hh  times.hh  to.hh  where.hh  zip.hh
src/clean-ranges/detail/: call.hh  range_helper.hh  type_or.hh
src/clean-ranges/ranges/: bounded_range.hh  sentinel_range.hh  unbounded_range.hh
tests/: CMakeLists.txt  algorithms.cc  basics.cc  collect.cc  copy-guarantees.cc  each.cc  flatmap.cc  general-call.cc  minmax.cc  ranges.cc
